add test with params added across api versions
