# swagger/multiapi-v1.json
@@ -159,7 +159,37 @@
                     }
                 }
             }
-        }
+        },
+        "/multiapi/testDifferentCalls": {
+          "get": {
+              "operationId": "testDifferentCalls",
+              "description": "Has added parameters across the API versions",
+              "x-ms-request-id": "request-id",
+              "parameters": [
+                  {
+                      "$ref": "#/parameters/ApiVersionParameter"
+                  },
+                  {
+                    "name": "greetingInEnglish",
+                    "in": "header",
+                    "required": true,
+                    "description": "pass in 'hello' to pass test.",
+                    "type": "string"
+                  }
+              ],
+              "responses": {
+                  "200": {
+                      "description": "Empty return value"
+                  },
+                  "default": {
+                      "description": "Unexpected error",
+                      "schema": {
+                          "$ref": "#/definitions/Error"
+                      }
+                  }
+              }
+          }
+      }
     },
     "definitions": {
         "Error": {
